--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template-typescript-express-graphql",
+  "name": "cra-template-typescript",
   "version": "0.1.0",
   "description": "",
   "type": "module",
