Added express to serve files

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,9 +25,9 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack.config.cjs --mode development --devtool inline-source-map --hot",
-    "start": "yarn run build",
+    "start": "yarn run build && NODE_ENV=production DEBUG=tbg:* node --experimental-modules --es-module-specifier-resolution=node ./server.tsx",
     "build": "NODE_ENV=production webpack --config ./webpack.config.cjs --mode production",
-    "lint": "./node_modules/.bin/eslint \"**/*.js\" --ignore-pattern node_modules/ --ignore-pattern dist/ --fix"
+    "lint": "./node_modules/.bin/eslint \"**/*.tsx\" --ignore-pattern node_modules/ --ignore-pattern dist/ --fix"
   },
   "eslintConfig": {
     "extends": [
